# ssh-poker-game

./: .gitignore  CHANGELOG.md  Cargo.toml  GAMEPLAY.md  MIGRATION_PLAN.md  Makefile  README.md  SSH_TESTING.md  bug-report-template.md  feature-request-template.md  init_db.sh  poker_game.db  poker_game.db.backup  quick_start.sh  run_server.sh  run_simple.sh  rust-toolchain.toml  test_ssh.sh  test_ssh_poker.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: issue-template-config.yml
.github/ISSUE_TEMPLATE/: task-template.md
.github/workflows/: claude-code-review.yml  claude.yml  devcontainer.yml  rust.yml
crates/ai-bot/: Cargo.toml
crates/ai-bot/src/: evaluator.rs  lib.rs  personality.rs  strategy.rs
crates/charm-tui/: Cargo.toml
crates/charm-tui/src/: app.rs  components.rs  events.rs  lib.rs  themes.rs  views.rs
crates/data-store/: Cargo.toml
crates/data-store/src/: error.rs  lib.rs  models.rs  operations.rs  schema.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  models.rs  operations.rs  schema.rs
crates/engine-service/: Cargo.toml  build.rs
crates/engine-service/src/: main.rs
crates/hybrid-metrics/: Cargo.toml
crates/hybrid-metrics/src/: lib.rs
crates/poker-engine/: Cargo.toml
crates/poker-engine/benches/: hand_evaluator_benchmark.rs
crates/poker-engine/src/: betting.rs  card.rs  deck.rs  errors.rs  fsm.rs  game.rs  hand.rs  lib.rs  player.rs
crates/poker-tui/: Cargo.toml
crates/poker-tui/src/: app.rs  components.rs  lib.rs  poker_table.rs  themes.rs  views.rs
crates/ssh-poker-server/: Cargo.toml
crates/ssh-poker-server/src/: auth.rs  error.rs  lib.rs  main.rs  secure_auth.rs  session.rs  ssh_handler.rs  ssh_tui_bridge.rs  tui_server.rs
crates/ssh-server/: Cargo.toml
crates/ssh-server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  secure_auth.rs  session.rs
crates/terminal-ui/: Cargo.toml
crates/terminal-ui/src/: app.rs  components.rs  error.rs  lib.rs  poker_table.rs  ui.rs
crates/wish-server/: Cargo.toml
crates/wish-server/src/: lib.rs  main.rs  ssh_tui_bridge.rs
docs/: README.md  architecture_ascii.md  architecture_diagrams.md  cargo_configuration.md  consolidation_summary.md  current_state_summary.md  design_improvements.md  development.md  executive_summary.md  implementation_strategy.md  project_details.md  references.md  requirements.md  roadmap.md  simplified_architecture.md  specifications.md  sprint-plan.md  tasks.md
docs/adr/: 0001-stabilize-the-rust-baseline.md  0002-go-frontend-rust-engine.md  0003-dev-container-environment.md  0004-grpc-contract-and-opaque-state.md  0005-monorepo-structure.md  0006-testing-strategy.md  0007-ci-cd-pipeline.md  0008-security-posture.md  0009-learning-sandbox-and-consolidation-path.md  README.md
docs/architecture/: overview.md
docs/book_mappings/: README.md  design_patterns_mapping.md  embedded_rust_mapping.md  rust_book_mapping.md
docs/practices/: spec-driven-development.md  test-driven-development.md
gateway/: go.mod
gateway/cmd/poker-gateway/: main.go
gateway/internal/pokerpb/: poker.pb.go  poker_grpc.pb.go
proto/poker/v1/: poker.proto
scripts/: setup_github_board.sh  setup_quality_board.sh
