[workspace]
resolver = "2"
members = [
    "crates/poker-engine",
    "crates/poker-tui",
    "crates/data-store",
    "crates/ai-bot",
    "crates/hybrid-metrics",
    "crates/ssh-poker-server",
    "crates/engine-service",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["AI Assistant <assistant@example.com>"]
license = "MIT"
repository = "https://github.com/user/ssh-poker-game"
description = "A beautiful SSH-accessible poker game with casino-themed TUI, hosted on Digital Ocean with Datadog observability."
keywords = ["poker", "game", "terminal", "ssh", "rust", "casino", "tui"]
categories = ["games", "command-line-utilities"] 