[package]
name = "engine-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Stateless gRPC rules engine wrapping poker-engine for the Go gateway."

[[bin]]
name = "engine-service"
path = "src/main.rs"

[dependencies]
poker-engine = { path = "../poker-engine" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tonic-build = "0.12"
