[package]
name = "ssh-poker-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Main server executable for the SSH poker game."
keywords.workspace = true
categories.workspace = true

[dependencies]
poker-engine = { path = "../poker-engine" }
wish-server = { path = "../wish-server" }
charm-tui = { path = "../charm-tui" }
data-store = { path = "../data-store" }
ai-bot = { path = "../ai-bot" }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
tokio = { version = "1.35", features = ["full"] }
env_logger = "0.11" 
log = "0.4"