[package]
name = "ssh-poker-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SSH-accessible multiplayer poker game server with casino-themed TUI."
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ssh-poker-server"
path = "src/main.rs"

[[bin]]
name = "create-user"
path = "src/bin/create_user.rs"

[dependencies]
russh = "0.44"
russh-keys = "0.44"
tokio = { version = "1.35", features = ["full"] }
log = "0.4"
poker-engine = { path = "../poker-engine" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
poker-tui = { path = "../poker-tui" }
futures = "0.3"
async-trait = "0.1"
data-store = { path = "../data-store" }
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
hybrid-metrics = { path = "../hybrid-metrics" }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

[dev-dependencies]
tempfile = "3.8" 