[package]
name = "ssh-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SSH server implementation for the poker game."
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ssh-server"
path = "src/main.rs"

[dependencies]
russh = "0.44"
russh-keys = "0.44"
tokio = { version = "1.35", features = ["full"] }
log = "0.4"
poker-engine = { path = "../poker-engine" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
terminal-ui = { path = "../terminal-ui" }
futures = "0.3"
async-trait = "0.1"
database = { path = "../database" }
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
crossterm = "0.27" 