[package]
name = "wish-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SSH server using Charm.sh Wish for beautiful terminal experiences."
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "wish-server"
path = "src/main.rs"

[dependencies]
# SSH server (Charm.sh Wish to be researched and integrated in Phase 2.2)
# Note: Using russh temporarily until Charm.sh Wish integration
russh = "0.44"
russh-keys = "0.44"
ssh-server = { path = "../ssh-server" }

# Core dependencies
poker-engine = { path = "../poker-engine" }
charm-tui = { path = "../charm-tui" }
data-store = { path = "../data-store" }
hybrid-metrics = { path = "../hybrid-metrics" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Terminal handling
crossterm = "0.28"
ratatui = "0.28"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }

# Authentication
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"